Fix missing spacing auto

--- a/src/styles/sizes.css
+++ b/src/styles/sizes.css
@@ -1,4 +1,5 @@
 :root {
+  --spacing-auto: auto;
   --spacing-xxs: 0.375rem;
   --spacing-xs: 0.5rem;
   --spacing-sm: 1rem;
